Move dark theme to own file, rename edlib theme file. Fix low contrast on secondary outline button in dark mode

--- a/sourcecode/hub/resources/css/layout.scss
+++ b/sourcecode/hub/resources/css/layout.scss
@@ -225,14 +225,3 @@
         }
     }
 }
-
-
-[data-bs-theme="dark"] {
-    .choices {
-        &[data-type*=select-one] {
-            .choices__button {
-                background-image: $choices-icon-cross;
-            }
-        }
-    }
-}
